--- a/columbus/src/app/page/clases/clases.html
+++ b/columbus/src/app/page/clases/clases.html
@@ -1,4 +1,4 @@
-<main class="max-w-5xl px-4 min-h-screen flex justify-center items-center">
+<main class=" px-4 min-h-screen flex bg-gradient-to-br from-slate-900 to-black justify-center items-center">
 
 <app-form-registro-clase/>
 </main>
